--- a/websiteform.html
+++ b/websiteform.html
@@ -11,14 +11,14 @@
     <a href="#">
       <img class="logo" src="assets/images/Think Latina.png" height="80px" />
     </a>
-      <a class="navbar-brand" href="websitehome.html">Think Latina</a>
+      <a class="navbar-brand" href="index.html">Think Latina</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="websitehome.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="websiteaboutus.html">About Us</a>
